--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -74,6 +74,11 @@ input{
   left: 920px;
   height: 30px;
   width: 72px;
+  background: cyan;
+  border: 1.5px solid #9e9e9e;
+  color: black;
+  font-family: "Helvetica Neue", Helvetica;
+  font-size: 16px;
 }
 .backbutton{
   position: absolute;
@@ -81,6 +86,11 @@ input{
   left: 28px;
   height: 30px;
   width: 72px;
+  background: #ff528d;
+  border: 1.5px solid #9e9e9e;
+  color: black;
+  font-family: "Helvetica Neue", Helvetica;
+  font-size: 16px;
 }
 .hidden{
   display: none;
