centered stars, fixed bugs, centered languages

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -141,7 +141,7 @@ input{
 .irish-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200,w_200/v1507182885/ie_qmdf23.gif);
   color: white;
-  text-shadow: 0px 0px 8px orange;
+  text-shadow: 0px 0px 8px black;
 }
 .italian-clicked{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,g_center,h_100,w_100/v1507181144/21cWPlKRcQL._SX355__xw8plb.jpg);
