--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -326,6 +326,19 @@ input{
   font-family: "Helvetica Neue", Helvetica;
   font-size: 16px;
 }
+.playagain{
+  position: absolute;
+  bottom: 214px;
+  left: 486px;
+  height: 70px;
+  width: 260px;
+  background: #7b42cc;
+  border-radius: 50px;
+  /*border: 1.5px solid #9e9e9e;*/
+  color: #76fafc;
+  font-family: "Helvetica Neue", Helvetica;
+  font-size: 30px;
+}
 .hidden{
   display: none;
 }
