--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,11 +2,14 @@ input, button{ outline: 0; }
 *{
   font-family: "Nexa Bold";
 }
+button:hover{
+  cursor: pointer;
+}
 
 canvas{
   border: 5px solid purple;
   position: absolute;
-  bottom: 64px;
+  /*bottom: 64px;*/
   z-index: -1;
   width: 1000px;
   /*width: calc(100vw - 25px);*/
@@ -15,6 +18,10 @@ canvas{
 }
 body{
   background: black;
+  /*width: 100vw;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 input{
   /*position: absolute;
@@ -24,6 +31,17 @@ input{
   width: 311px;
   font-family: Arial;
   font-size: 34px;
+}
+.logo{
+  position: absolute;
+  left: 25px;
+}
+.centerhor{
+  margin: 0 auto;
+  width: 1000px;
+  height: 600px;
+  position: absolute;
+  bottom: calc(18vh - 30px);
 }
 .findus{
   width: 100%;
@@ -47,6 +65,7 @@ input{
 .findus p{
   margin: 3px;
   position: relative;
+  width: 76px;
   top: -2px;
   height: 18px;
   color: black;
@@ -61,10 +80,14 @@ input{
   display: flex;
   padding-right: 23px;
 }
+.findus p:hover{
+  /*color: purple;*/
+  font-size: 1.3em;
+}
 .floatright{
   display: flex;
   float: right;
-  margin-right: 8px;
+  margin-right: 52px;
   margin-top: 3px;
 }
 .language{
@@ -79,9 +102,12 @@ input{
   font-size: 19px;
   border-radius: 90px;
 }
+.language:hover{
+  background: purple;
+}
 .large{
   position: absolute;
-  top: 285px;
+  bottom: 317px;
   left: 118px;
   width: 200px;
   height: 200px;
@@ -155,6 +181,9 @@ input{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100/v1506906560/2000px-Spanish_Presidential_Flag.svg_j9x2z4.png);
   font-size: 0px;
 }
+.spanish-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100/v1506906560/2000px-Spanish_Presidential_Flag.svg_j9x2z4.png);
+}
 .spanish-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200/v1506906560/2000px-Spanish_Presidential_Flag.svg_j9x2z4.png);
   color: white;
@@ -162,6 +191,9 @@ input{
 .swedish-clicked{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100/v1506906753/2000px-Swedish_Flag-1.svg_vgvvmx.png);
   font-size: 0px;
+}
+.swedish-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100/v1506906753/2000px-Swedish_Flag-1.svg_vgvvmx.png);
 }
 .swedish-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200/v1506906753/2000px-Swedish_Flag-1.svg_vgvvmx.png);
@@ -171,6 +203,9 @@ input{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1506928001/french-flag_wnpsrq.jpg);
   font-size: 0px;
 }
+.french-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1506928001/french-flag_wnpsrq.jpg);
+}
 .french-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200,w_200/v1506928001/french-flag_wnpsrq.jpg);
   color: black;
@@ -178,6 +213,9 @@ input{
 .swahili-clicked{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1506928413/1280px-Flag_of_Kenya.svg_vghqqy.png);
   font-size: 0px;
+}
+.swahili-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1506928413/1280px-Flag_of_Kenya.svg_vghqqy.png);
 }
 .swahili-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200,w_200/v1506928413/1280px-Flag_of_Kenya.svg_vghqqy.png);
@@ -188,6 +226,9 @@ input{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1506928337/Flag_of_the_Netherlands_hkpyao.png);
   font-size: 0px;
 }
+.dutch-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1506928337/Flag_of_the_Netherlands_hkpyao.png);
+}
 .dutch-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200,w_200/v1506928337/Flag_of_the_Netherlands_hkpyao.png);
   color: black;
@@ -195,6 +236,9 @@ input{
 .irish-clicked{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1507182885/ie_qmdf23.gif);
   font-size: 0px;
+}
+.irish-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1507182885/ie_qmdf23.gif);
 }
 .irish-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200,w_200/v1507182885/ie_qmdf23.gif);
@@ -205,6 +249,9 @@ input{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,g_center,h_100,w_100/v1507181144/21cWPlKRcQL._SX355__xw8plb.jpg);
   font-size: 0px;
 }
+.italian-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,g_center,h_100,w_100/v1507181144/21cWPlKRcQL._SX355__xw8plb.jpg);
+}
 .italian-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,g_center,h_200,w_200/v1507181144/21cWPlKRcQL._SX355__xw8plb.jpg);
   color: black;
@@ -214,6 +261,9 @@ input{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1507181187/1200px-Flag_of_Germany.svg_l5vlm7.png);
   font-size: 0px;
 }
+.german-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_100,w_100/v1507181187/1200px-Flag_of_Germany.svg_l5vlm7.png);
+}
 .german-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,h_200,w_200/v1507181187/1200px-Flag_of_Germany.svg_l5vlm7.png);
   color: black;
@@ -221,6 +271,9 @@ input{
 .maori-clicked{
   background-image: url(http://res.cloudinary.com/make-anything/image/upload/c_crop,g_east,h_278,w_433,x_108/c_scale,h_100,w_100/v1507181223/maori-national-flag_pvj0qy.gif);
   font-size: 0px;
+}
+.maori-clicked:hover{
+  background-image: url(http://res.cloudinary.com/make-anything/image/upload/c_crop,g_east,h_278,w_433,x_108/c_scale,h_100,w_100/v1507181223/maori-national-flag_pvj0qy.gif);
 }
 .maori-large{
   background-image: url(http://res.cloudinary.com/make-anything/image/upload/c_crop,g_east,h_278,w_433,x_108/c_scale,h_200,w_200/v1507181223/maori-national-flag_pvj0qy.gif);
@@ -231,6 +284,9 @@ input{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,g_west,h_100,w_100/v1507181353/za_ub5ern.png);
   font-size: 0px;
 }
+.afrikaans-clicked:hover{
+  background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,g_west,h_100,w_100/v1507181353/za_ub5ern.png);
+}
 .afrikaans-large{
   background-image: url(https://res.cloudinary.com/make-anything/image/upload/c_scale,g_west,h_200,w_200/v1507181353/za_ub5ern.png);
   color: white;
@@ -238,8 +294,8 @@ input{
 }
 .backnext{
   max-width: 975px;
-  position: absolute;
-  bottom: 44px;
+  position: relative;
+  bottom: -33px;
   display: flex;
   justify-content: space-between;
   width: calc(100vw - 50px);
@@ -262,36 +318,36 @@ input{
 /*@media screen and (min-width: 1024px) {*/
   .inputsection {
   max-width: 975px;
-  position: absolute;
-  bottom: 514px;
+  position: relative;
+  bottom: 519px;
   left: 489px;
   display: flex;
   justify-content: space-between;
-  width: calc(100vw - 50px);
+  /*width: calc(100vw - 50px);*/
   height: 50px;
   padding: 18px;
   }
 /*}*/
 .chooselang1{
   /*max-width: 810px;*/
-  position: absolute;
-  bottom: 110px;
+  position: relative;
+  top: 290px;
   display: flex;
   justify-content: space-around;
   /*width: calc(100vw - 215px);*/
   /*height: calc(((100vw - 215px) / 4.5) + 57px);*/
   /*max-height: 240px;*/
   height: 240px;
-  width: 810px;
-  padding-left: 100px;
-  padding: 20px;
-  left: 87px;
+  width: 100%;
+  /*padding-left: 100px;*/
+  padding: 8px;
+  /*left: 87px;*/
 }
 .chooselang2{
   /*max-width: 810px;*/
-  width: 810px;
-  position: absolute;
-  bottom: 0px;
+  width: 100%;
+  position: relative;
+  bottom: -150px;
   display: flex;
   justify-content: space-around;
   /*width: calc(100vw - 215px);*/
@@ -299,8 +355,8 @@ input{
   /*max-height: 235px;*/
   height: 235px;
   padding-left: 100px;
-  padding: 20px;
-  left: 87px;
+  padding: 8px;
+  /*left: 87px;*/
 }
 .nextbutton{
   /*position: absolute;
@@ -308,9 +364,9 @@ input{
   right: calc(28px + (100vw - 1000px));*/
   height: 30px;
   width: 72px;
-  background: cyan;
+  background: #ab3151;
   border: 1.5px solid #9e9e9e;
-  color: black;
+  color: white;
   font-family: "Helvetica Neue", Helvetica;
   font-size: 16px;
 }
@@ -320,11 +376,14 @@ input{
   left: 28px;*/
   height: 30px;
   width: 72px;
-  background: #ff528d;
+  background: #ab3151;
   border: 1.5px solid #9e9e9e;
-  color: black;
+  color: white;
   font-family: "Helvetica Neue", Helvetica;
   font-size: 16px;
+}
+.nextbutton:hover, .backbutton:hover{
+  background: purple;
 }
 .playagain{
   position: absolute;
