--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,6 +2,12 @@ input, button{ outline: 0; }
 *{
   font-family: "Nexa Bold";
 }
+#answer-list .fail:hover{
+  color: red;
+}
+#answer-list .success:hover{
+  color: #10d818;
+}
 button:hover{
   cursor: pointer;
 }
@@ -34,15 +40,28 @@ input{
 }
 #answer-list{
   position: relative;
-  bottom: 520px;
+  bottom: 591px;
   left: 690px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   font-size: 2.6em;
-
+  /*z-index: -1;*/
   color: cyan;
 }
 #answer-list div{
-  padding-top: 30px;
+  padding: 24px 0px;
   font-family: Arial;
+  width: 200px;
+}
+#answer-list div:hover{
+  cursor: pointer;
+  color: purple;
+}
+.hiddenheight{
+  height: 0px;
+  width: 0px;
 }
 .logo{
   position: absolute;
@@ -119,7 +138,7 @@ input{
 }
 .large{
   position: absolute;
-  bottom: 317px;
+  bottom: 246px;
   left: 118px;
   width: 200px;
   height: 200px;
@@ -327,6 +346,7 @@ input{
     padding: 18px;
   }
 }*/
+
 /*@media screen and (min-width: 1024px) {*/
   .inputsection {
   max-width: 975px;
@@ -399,7 +419,7 @@ input{
 }
 .playagain{
   position: absolute;
-  bottom: 214px;
+  bottom: 143px;
   left: 486px;
   height: 70px;
   width: 260px;
