--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -430,6 +430,9 @@ input{
   font-family: "Helvetica Neue", Helvetica;
   font-size: 30px;
 }
+.playagain:hover{
+  background: purple;
+}
 .hidden{
   display: none;
 }
